--- a/argocd-helm-chart/values.yaml
+++ b/argocd-helm-chart/values.yaml
@@ -81,24 +81,24 @@ argo-cd:
             selfHeal: true
             prune: true
       # LOGSTASH APPLICATION
-#      - name: logstash
-#        project: default
-#        source:
-#          repoURL: https://github.com/AhmedGrati/logstash-helm-chart
-#          targetRevision: HEAD
-#          helm:
-#            valueFiles:
-#              - values.yaml
-#          path: logstash-helm-chart
-#        destination:
-#          server: https://kubernetes.default.svc
-#          namespace: monitoring
-#        syncPolicy:
-#          syncOptions:
-#            - CreateNamespace=true
-#          automated:
-#            selfHeal: true
-#            prune: true
+      - name: logstash
+        project: default
+        source:
+          repoURL: https://github.com/AhmedGrati/logstash-helm-chart
+          targetRevision: HEAD
+          helm:
+            valueFiles:
+              - values.yaml
+          path: logstash-helm-chart
+        destination:
+          server: https://kubernetes.default.svc
+          namespace: monitoring
+        syncPolicy:
+          syncOptions:
+            - CreateNamespace=true
+          automated:
+            selfHeal: true
+            prune: true
       # KIBANA APPLICATION
       - name: kibana
         project: default
